Раббота с БД. Многопоточность